--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -3,7 +3,7 @@
     top: 60px;
     left: 0;
     bottom: 0;
-    width: 120px;
+    width: 10%;
     background-color: #15140D;
     padding: 20px;
   }
