--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   /* line-height: 24px; */
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   /* color: rgba(0, 0, 0, 0.87); */
   background-color: #ffffff;
 
