--- a/src/pages/Modules/css/module1.css
+++ b/src/pages/Modules/css/module1.css
@@ -16,3 +16,12 @@
   transform: translate(-30%, -50%);
   z-index: 1;
 }
+
+.container-audio{
+  display: inline-flex;
+
+}
+
+.button-audio-red{
+  margin-right: 10px;
+}
