--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -4,10 +4,13 @@
   left: 0;
   bottom: 0;
   float: left;
-  width: 10%;
+  width: 12%;
   height: 100%;
-  background-color: #15140d;
+  background-color: rgb(255, 255, 255);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
   padding: 20px;
+  border-right: 2px solid rgb(168, 168, 165);
 }
 
 .sidebar ul {
@@ -21,7 +24,7 @@
   align-items: center;
   margin-bottom: 10px;
   cursor: pointer;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .sidebar li span {
