--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -4,13 +4,14 @@
   left: 0;
   bottom: 0;
   float: left;
-  width: 12%;
+  width: 17%;
   height: 100%;
   background-color: rgb(255, 255, 255);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
   padding: 20px;
   border-right: 2px solid rgb(168, 168, 165);
+  overflow: auto;
 }
 
 .sidebar ul {
@@ -25,6 +26,7 @@
   margin-bottom: 10px;
   cursor: pointer;
   color: rgb(0, 0, 0);
+  padding: 3px;
 }
 
 .sidebar li span {
@@ -41,3 +43,12 @@
   transition: transform 0.1s ease;
 }
 
+.selectedItem {
+  border: 3px solid rgb(255, 208, 0);
+  border-radius: 0.8rem;
+  
+}
+
+.selected-bg {
+  background-color:rgba(255,223, 0, 0.4);
+}
