--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -7,7 +7,7 @@
   width: 17%;
   height: 100%;
   background-color: rgb(255, 255, 255);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 16px;
   padding: 20px;
   border-right: 2px solid rgb(168, 168, 165);
@@ -31,9 +31,7 @@
 
 .sidebar li span {
   margin-left: 10px;
-  
 }
-
 
 .sidebar li:hover span {
   transform: scale(1.1);
@@ -46,9 +44,8 @@
 .selectedItem {
   border: 3px solid rgb(255, 208, 0);
   border-radius: 0.8rem;
-  
 }
 
 .selected-bg {
-  background-color:rgba(255,223, 0, 0.4);
+  background-color: rgba(255, 223, 0, 0.4);
 }
